tests/fails/wrong_attribute.rs
#![feature(register_tool)]
#![register_tool(taint)]

#[taint::not_valid] //~ ERROR
fn main() {}
